--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,6 +1,8 @@
 ---
 driver:
   name: docker
+  privileged: true
+  use_sudo: false
 
 provisioner:
   name: chef_zero
@@ -15,7 +17,9 @@ verifier:
   name: inspec
 
 platforms:
-  - name: ubuntu-18.04
+  - name: centos-7.2
+    driver_config:
+      run_command: /usr/lib/systemd/systemd
 
 suites:
   - name: default
